api/basic-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: sample
spec:
  selector:
    app: green-sample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
